changes added to index

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,9 +94,7 @@ body {
   background: #2f303a;
   font-family: "Roboto";
   font-style: normal;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 60px;
+
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -105,9 +103,6 @@ body {
 .orderbutton {
   font-family: "Roboto";
   font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 30px;
 
   display: center;
   align-items: center;
@@ -118,4 +113,51 @@ body {
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+.textheadline {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #212121;
+}
+.textcontent {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.sectionheadline {
+  font-family: "Roboto";
+  font-style: normal;
+
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+.ourteamname {
+  font-family: "Roboto";
+  font-style: normal;
+
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.ourteamfunction {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
