corrected buttons hoover color

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 .filters:hover,
 .focus {
-  color: #2196f3;
+  color: #ffffff;
+  background-color: #2196f3;
 }
 .filters {
   font-family: "Roboto";
